--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: kisanhub_assignment
-description: A new Flutter project.
+description: Kisanhub Assignment.
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -20,6 +20,10 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^0.12.0+2
+  shared_preferences: ^0.5.4+5
+  material_design_icons_flutter: ^3.3.4595
+  flutter_svg: ^0.14.4
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
